# ffMetadataEx

./: .gitignore  Modules.md  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
ffMetadataEx/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: CMakeLists.txt  ffMetaExJni.cpp
src/main/java/wah/mikooomich/ffMetadataEx/: Extractor.kt  FFMetadataEx.kt  FFMpegWrapper.kt
